k8s/hello/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello # Namespace isolates resources and avoids using "default"
